style.css
html,
body {
  border: 0;
  height: 100%;
  margin: 0;
  padding: 0;
  width: 100%;
}

#greenScreen {
  display: flex;
  flex-direction: column;
  height: 100%;
  width: 100%;
}

#messageWrapper {
  background: #00ff00;
  color: #FFF;
  display: flex;
  flex-direction: column;
  flex: 1;
  font-size: 16pt;
}

#message {
  overflow: hidden;
  padding: 25px 0;
  text-align: center;
  white-space: nowrap;
  width: 100%;
}

#inputs {
  display: flex;
  height: 50px;
  padding: 15px;
}

#text {
  flex: 5;
  font-size: 16pt;
  padding: 5px 10px;
}

#fontFamily,
#fontSize,
#valign {
  align-items: center;
  display: flex;
  justify-content: center;
}

#fontFamily,
#valign {
  min-width: 250px;
}

#fontSize {
  min-width: 125px;
}

#fontFamily select {
  width: 80%;
}

#fontSize {
  flex: 1;
}

#valign input {
  margin-left: 25px;
}

